[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/ui/HPBar.gd" type="Script" id=1]
[ext_resource path="res://game/assets/sprites/UI/HPBarOutline.png" type="Texture2D" id=2]
[ext_resource path="res://game/assets/sprites/UI/HPBarFull.png" type="Texture2D" id=4]

[node name="HPBar" type="Node2D"]
script = ExtResource( 1 )

[node name="ComboHPAndEmpty" type="TextureProgressBar" parent="."]
offset_right = 661.0
offset_bottom = 55.0
max_value = 1000.0
value = 80.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 1
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.364706, 0.0470588, 0.0470588, 1 )

[node name="AttackHP" type="TextureProgressBar" parent="."]
offset_right = 661.0
offset_bottom = 55.0
max_value = 1000.0
value = 50.0
texture_progress = ExtResource( 4 )
fill_mode = 1
tint_progress = Color( 1, 0.121569, 0.388235, 1 )

[node name="FullHP" type="TextureProgressBar" parent="."]
offset_right = 661.0
offset_bottom = 55.0
max_value = 1000.0
value = 25.0
texture_progress = ExtResource( 4 )
fill_mode = 1
tint_progress = Color( 1, 0.807843, 0.243137, 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( 321.25, 27 )
scale = Vector2( 0.996413, 0.978723 )
texture = ExtResource( 2 )
